src/objects/Installed_Panel__c.object
<CustomObject>
    <fields>
        <fullName>Installed_System__c</fullName>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>Installed Panels</relationshipLabel>
        <relationshipName>Installed_Panels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inverter_Serial_Number__c</fullName>
        <label>Inverter Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Manufacturer__c</fullName>
        <label>Panel Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Output_W__c</fullName>
        <label>Panel Output (W)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Serial_Number__c</fullName>
        <label>Panel Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <label>Panel Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Installed Panel</label>
    <nameField>
        <displayFormat>IP-{0000000000}</displayFormat>
        <label>Installed Panel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>